assets/css/style.css
body {
    padding:0;
    margin: 0;
    border: 0;
}

/*-----------------------Header----*/

.logo {
    height: 100px;
    width: 100px;
    background-image: url("../images/logo2.jpg");
    background-repeat: no-repeat;
}

.navbar {
    text-align: right;
  
}


.navbar-nav {
    padding-right: 5px;
}

.container-fluid {
    padding: 0;
   
}

li p {
    display: block;
    margin-block-start: 0;
    margin-block-end: 0;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

li p:hover {
    cursor: pointer;
}

/*----------------------Footer-----*/

.social-header {
    background-color: green;
    text-align: left;
     padding-left: 5%;
     background-color: purple;
     text-align: center;
}

.social-list {
    padding-left: 5%;
     text-align: center;
}


.row {
    margin:0;
}

.fab {
    color: black;
}



li {
    list-style-type: none;
    text-decoration: none;
}
/*----------------------Index-----*/




/*-----------------------Section carousel----*/


.carousel-section {
    padding-top:79px;
    
}



/*---Index About----*/

.about-image {
    background-color: orange;
}

.about-text {
    background-color: grey;
}

/*---Pricing-----*/

.pricing {
    background-color: blue;
    height: 40vh;
    
}
  




/*----------------------Meetings-----*/


/*----------------------Sign-Up-----*/
.container-membership {
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;  
}

.member-col-10 {
    padding-left: 0px;
}





/*----------------------Members-----*/

.members-form{
    background-color: green;
    height: 50vh;
}


/*----------------------Contact Us-----*/
.contact-list{
     padding-left: 5%;
     text-align: center;
}

